<resources>
    <string name="app_name">Notes App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password Invalid</string>
    <string name="login_failed">"Login failed"</string>
    <string name="label_regist">Don\'t have account? Register here</string>
    <string name="splash_image">splash image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="indonesia">Indonesian</string>
    <string name="english">English</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="label_login">Have account? Login here</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="update_success">Update Success</string>
    <string name="lgout">Logout</string>
    <string name="delete_success">Delete Success</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="login_success">Login Success</string>
    <string name="failed_load_data">Failed to Load Data</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="regist_success">Register Success</string>
    <string name="regist_failed">Register Failed</string>
    <string name="empty_field">Field Can\'t be Empty</string>
    <string name="under_construc">This feature is still under construction</string>
    <string name="prompt_repeat_password">Repeat Password</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="favorite">Favorite</string>
    <string name="logout_for_update">You have change Password. Login for new Password</string>
    <string name="pass_not_match">Password not Match</string>
    <string name="favorited">Task Mark as Favorite</string>
    <string name="unmark_favorited">Task Unmark as Favorite</string>
</resources>