<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DetailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom"
        android:background="@color/cream">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/vTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/welcome"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/vImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_hw"
                    android:layout_below="@+id/vTitle"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/splash_image" />

                <TextView
                    android:id="@+id/vContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/vImage"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:hint="@string/welcome" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/layout_bottom_appbar"
                android:text="@string/update"/>

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/layout_bottom_appbar_negative"
                android:text="@string/delete"/>

            <ImageView
                android:id="@+id/btn_favorit"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/fab_margin"
                android:src="@drawable/unheart"
                android:contentDescription="@string/favorite" />

        </com.google.android.material.bottomappbar.BottomAppBar>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</RelativeLayout>